--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-	<head> Test Website </head>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Document</title>
+	</head>
 	<body>
-		<h1> Hello, World! </h1>
+		<h1>Hello! This is a test Website</h1>
 	</body>
 </html>
