css style refactor

--- a/www/index.html
+++ b/www/index.html
@@ -4,68 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>webserv</title>
-	<style>
-		body {
-			margin: 0;
-			padding: 0;
-			height: 100vh;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			background-color: #1a1a1a;
-			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-		}
-
-		.container {
-			text-align: center;
-			padding: 4rem;
-			background-color: #252525;
-			border-radius: 15px;
-			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-		}
-
-		h1 {
-			color: #fcba03;
-			font-size: 5rem;
-			margin: 0;
-			letter-spacing: 2px;
-			text-transform: lowercase;
-		}
-
-		h2 {
-			color: #808080;
-			font-size: 2rem;
-			margin-top: 1rem;
-			font-weight: 300;
-		}
-
-		.highlight {
-			color: #9803fc;
-		}
-
-		nav {
-			margin-top: 2rem;
-		}
-
-		.nav-links {
-			list-style: none;
-			padding: 0;
-			display: flex;
-			gap: 1.5rem;
-		}
-
-		.nav-links a {
-			color: #808080;
-			text-decoration: none;
-			font-size: 1.2rem;
-			transition: color 0.3s;
-		}
-
-		.nav-links a:hover {
-			color: #fcba03;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="container">
