fixed upload issues for plain text files but not for complex formats like pdf. Tweaked some html and css stuff.

--- a/www/pages/upload.html
+++ b/www/pages/upload.html
@@ -15,7 +15,7 @@
 		</form>
 		<nav>
 			<ul class="nav-links">
-				<li><a href="/">Home</a></li>
+				<li><a href="/">Back</a></li>
 			</ul>
 		</nav>
 	</div>
