--- a/www/pages/minishell.html
+++ b/www/pages/minishell.html
@@ -18,7 +18,7 @@
 		</form>
 		<nav>
 			<ul class="nav-links">
-				<li><a href="/">Home</a></li>
+				<li><a href="/">Back</a></li>
 			</ul>
 		</nav>
 	</div>
