CGI working surprisingly

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
 			<ul class="nav-links">
 				<li><a href="/pages/about.html">About</a></li>
 				<li><a href="/pages/upload.html">Upload</a></li>
-				<li><a href="/pages/minishell.html">Minishell</a></li>
+				<li><a href="/pages/GCIscript.html">GCI Script</a></li>
 			</ul>
 		</nav>
 	</div>
