--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,8 @@
 			<ul class="nav-links">
 				<li><a href="/pages/about.html">About</a></li>
 				<li><a href="/pages/upload.html">Upload</a></li>
-				<li><a href="/pages/CGIscript.html">GCI Script</a></li>
+				<li><a href="/pages/CGIscript.html">GCI Push_Swap</a></li>
+				<li><a href="/pages/CGIscript_mega.html">GCI Megaphone</a></li>
 			</ul>
 		</nav>
 	</div>
