--- a/www/pages/CGIscript_mega.html
+++ b/www/pages/CGIscript_mega.html
@@ -10,8 +10,8 @@
 	<div class="container">
 		<h1>Megaphone</h1>
 		<div class="push-swap-form">
-			<input type="text" id="input" placeholder="Speak into the megaphone">
-			<button onclick="runMegaphone()">Enhance voice</button>
+			<input type="text" id="voice" placeholder="Speak">
+			<button onclick="runMegaphone()">Enhance your voice</button>
 		</div>
 		<div id="cgi-output" class="markdown-content">
 			Output will appear here...
@@ -25,33 +25,27 @@
 
 	<script>
 		function runMegaphone() {
-			const input = document.getElementById('input').value;
+			const voice = document.getElementById('voice').value;
 			const output = document.getElementById('cgi-output');
 			output.innerHTML = 'Running megaphone...';
-	
-			// Send input using POST
-			fetch('/cgi-bin/megaphone.cgi', {
-				method: 'POST',
-				headers: {
-					'Content-Type': 'application/x-www-form-urlencoded',
-				},
-				body: 'input=' + input // Send raw input directly
-			})
-			.then(response => {
-				if (!response.ok) {
-					throw new Error('Network response was not ok');
-				}
-				return response.text();
-			})
-			.then(html => {
-				document.getElementById('cgi-output').innerHTML = html;
-			})
-			.catch(error => {
-				console.error('Error:', error);
-				document.getElementById('cgi-output').innerHTML = 
-					'<p class="error">Error running megaphone: ' + error.message + '</p>';
-			});
+			
+			fetch('/cgi-bin/megaphone.cgi?voice=' + encodeURIComponent(voice))
+				.then(response => {
+					if (!response.ok) {
+						throw new Error('Network response was not ok');
+					}
+					return response.text();
+				})
+				.then(html => {
+					document.getElementById('cgi-output').innerHTML = html;
+				})
+				.catch(error => {
+					console.error('Error:', error);
+					document.getElementById('cgi-output').innerHTML = 
+						'<p class="error">Error running megaphone: ' + error.message + '</p>';
+				});
 		}
 	</script>
 </body>
 </html>
+
