Giant cleanup. Made all files look beautiful 💅 and organized 💎. All functionality retained. 🎤

--- a/www/pages/CGIscript_mega.html
+++ b/www/pages/CGIscript_mega.html
@@ -32,9 +32,9 @@
 			fetch('/cgi-bin/megaphone.cgi?voice=' + encodeURIComponent(voice))
 				.then(response => {
 					if (!response.ok) {
-						throw new Error('Network response was not ok');
+						throw	new Error('Network response was not ok');
 					}
-					return response.text();
+					return (response.text());
 				})
 				.then(html => {
 					document.getElementById('cgi-output').innerHTML = html;
