--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -23,9 +23,9 @@
 		fetch('../README.md')
 			.then(response => {
 				if (!response.ok) {
-					throw new Error('Network response was not ok');
+					throw	new Error('Network response was not ok');
 				}
-				return response.text();
+				return (response.text());
 			})
 			.then(text => {
 				const readmeHtml = marked.parse(text);
