--- a/www/pages/upload.html
+++ b/www/pages/upload.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h1>Upload Files</h1>
-		<form class="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
+		<form class="upload-form" action="/uploads" method="POST" enctype="multipart/form-data">
 			<input type="file" name="file" required>
 			<button type="submit">Upload</button>
 		</form>
