Removed a dirrective from server and removed alias as well as root  from location. Added some images to the error pages and added a page for the 413 'Payload to large' error

--- a/www/error_pages/403.html
+++ b/www/error_pages/403.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h1>403 - Forbidden</h1>
-		<h2>You shall not pass!</h2>
+		<img src="https://i.imgflip.com/2u5y6a.png?a486288" alt="Forbidden">
 	</div>
 </body>
 </html>
