--- a/www/error_pages/405.html
+++ b/www/error_pages/405.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>webserv - 405</title>
+	<title>webserv - 413</title>
 	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 	<div class="container">
-		<h1>405 - Method not allowed</h1>
-		<h2>God said no to that...</h2>
+		<h1>413 - Method not allowed</h1>
+		<img src="https://i.pinimg.com/736x/da/fb/26/dafb26ec25a35d47140acc54525717a2.jpg" alt="Method Not Allowed">
+		<h2>No Methods?</h2>
 	</div>
 </body>
 </html>
