--- a/www/error_pages/404.html
+++ b/www/error_pages/404.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h1>404 - Not Found</h1>
-		<h2>This page does not exist. Skill issue.</h2>
+		<img src="https://i.imgur.com/p6GZ4kc.png" alt="Not Found">
 	</div>
 </body>
 </html>
