--- a/www/error_pages/500.html
+++ b/www/error_pages/500.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h1>500 - Internal Server Error</h1>
-		<h2>That is our fault, sorry man.</h2>
+		<img src="https://i.ebayimg.com/images/g/LBYAAOSwCg1iikW6/s-l400.jpg" alt="Internal Server Error">
 	</div>
 </body>
 </html>
