--- a/www/error_pages/504.html
+++ b/www/error_pages/504.html
@@ -3,14 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>webserv - 405</title>
+	<title>webserv - 504</title>
 	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 	<div class="container">
-		<h1>405 - Method not allowed</h1>
-		<img src="https://i.pinimg.com/736x/da/fb/26/dafb26ec25a35d47140acc54525717a2.jpg" alt="Method Not Allowed">
-		<h2>No Methods?</h2>
+		<h1>504 - Gateway Timeout</h1>
+		<img src="https://www.meme-arsenal.com/memes/2ff9af270b11498f2b564bd5eef60009.jpg" alt="Gateway Timeout">
 	</div>
 </body>
 </html>
