Total CGI rewrite to handle GET and POST reqeusts and also huge webpage stuff and yeah yeah

--- a/www/error_pages/400.html
+++ b/www/error_pages/400.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h1>400 - Bad Request</h1>
-		<img src="https://i.imgflip.com/29bv7h.jpg?a486192" alt="Bad Request">
+		<img src="https://i.pinimg.com/736x/24/63/3a/24633a75bd4c6ad2ab0c1a6569bc7223.jpg" alt="Bad Request">
 	</div>
 </body>
 </html>
