--- a/www/pages/index.html
+++ b/www/pages/index.html
@@ -13,9 +13,8 @@
 		<nav>
 			<ul class="nav-links">
 				<li><a href="/pages/about.html">About</a></li>
-				<li><a href="/pages/upload.html">Upload</a></li>
-				<li><a href="/pages/CGIscript.html">GCI Push_Swap</a></li>
-				<li><a href="/pages/CGIscript_mega.html">GCI Megaphone</a></li>
+				<li><a href="/pages/upload.html">File Uploader</a></li>
+				<li><a href="/pages/CGItesting.html">GCI Scripts</a></li>
 				<li><a href="https://http.cat/402" class="secondary">Top Secret!</a></li>
 			</ul>
 		</nav>
