about and readme update

--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -77,26 +77,28 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr><td>server</td><td>scope</td><td>N/A</td><td>Defines a server to run upon execution.</td></tr>
+				<tr><td>server</td><td>scope</td><td>server name</td><td>Defines a server to run upon execution.</td></tr>
+				<tr><td>error_page</td><td>directive</td><td>status code, path to page</td><td>Sets the response page to be used for a specified status code.</td></tr>
 				<tr><td>location</td><td>scope</td><td>path (relative to server root)</td><td>Defines a location in the server. Must be inside a server scope.</td></tr>
 				<tr><td>listen</td><td>directive</td><td>port number</td><td>Sets the port that this server will listen to.</td></tr>
 				<tr><td>host</td><td>directive</td><td>ip address</td><td>Sets the IP the server will be hosted on.</td></tr>
 				<tr><td>root</td><td>directive</td><td>path</td><td>Sets the root directory of the server.</td></tr>
 				<tr><td>index</td><td>directive</td><td>path/filename</td><td>Sets the default response file for a simple request to the server.</td></tr>
 				<tr><td>timeout</td><td>directive</td><td>time (seconds)</td><td>Sets the maximum time the socket connection will stay open awaiting a request before timing out.</td></tr>
-				<tr><td>cgi_path</td><td>directive</td><td>path</td><td>Sets the path that will be treated as the CGI execution directory.</td></tr>
+				<tr><td>cgi</td><td>directive</td><td>file extensions</td><td>Defines the file types which will be treated as CGI scripts by the server.</td></tr>
 				<tr><td>max_body</td><td>directive</td><td>size (bytes)</td><td>Sets the maximum body size that can be handled from a <code>POST</code> request for a specific location.</td></tr>
 				<tr><td>methods</td><td>directive</td><td>method names (space separated)</td><td>Sets the allowed methods for a specific location.</td></tr>
 			</tbody>
 		</table>
 
 		<p><strong>Example config:</strong></p>
-        <pre>server {
+        <pre>server epic_server {
     listen 8080;
     host 127.0.0.1;
     root www/;
     index index.html;
     timeout 10;
+    error_page 404 error_pages/404.html;
 
     location / {
         methods GET;
