--- a/www/pages/index.html
+++ b/www/pages/index.html
@@ -14,7 +14,7 @@
 			<ul class="nav-links">
 				<li><a href="/pages/about.html">About</a></li>
 				<li><a href="/pages/upload.html">File Uploader</a></li>
-				<li><a href="/pages/CGItesting.html">GCI Scripts</a></li>
+				<li><a href="/pages/CGItesting.html">CGI Scripts</a></li>
 				<li><a href="https://http.cat/402" class="secondary">Top Secret!</a></li>
 			</ul>
 		</nav>
