--- a/www/error_pages/413.html
+++ b/www/error_pages/413.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h1>413 - Payload Too Large</h1>
-		<img src="https://strayfawnstudio.com/community/uploads/monthly_2021_05/image.png.9c291e4e783eb4cb43238b101fcf11f3.png" alt="Payload Too Large">
+		<img src="https://www.nairaland.com/attachments/936918_overload2_jpgd9860df77c962c7986c1e73087d17dd1" alt="Payload Too Large">
 	</div>
 </body>
 </html>
