--- a/www/error_pages/404.html
+++ b/www/error_pages/404.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h1>404 - Not Found</h1>
-		<img src="https://media.tenor.com/tNUmI0dD6VEAAAAe/despair.png" alt="Not Found">
+		<img src="https://c.tenor.com/nYdAr6rffx0AAAAC/an-emoji-disintegrating-in-pain.gif" alt="Not Found">
 	</div>
 </body>
 </html>
