final cleanup post-finish

--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -88,6 +88,7 @@
 				<tr><td>cgi</td><td>directive</td><td>file extensions</td><td>Defines the file types which will be treated as CGI scripts by the server.</td></tr>
 				<tr><td>max_body</td><td>directive</td><td>size (bytes)</td><td>Sets the maximum body size that can be handled from a <code>POST</code> request for a specific location.</td></tr>
 				<tr><td>methods</td><td>directive</td><td>method names (space separated)</td><td>Sets the allowed methods for a specific location.</td></tr>
+				<tr><td>return</td><td>directive</td><td>path aliases</td><td>Adds aliases that will redirect to the location the return directive is in.</td></tr>
 			</tbody>
 		</table>
 
